--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,3 @@
-1. Move buildPossibleNodesForNode to be function of node
-2. Implement getUtility of buildPossibleNodesForNode
+3. Print Board function
+4. Print state function
 3. Implement getNextMoveForGameState
