--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
-
-3. PrintBoard function
-3. The minxMax part of the searchTree
-4. Improve performance of tree?
-5. Improve AI performance?
+TODO:
+1. The minxMax part of the searchTree
+2. Improve performance of tree?
+3. Improve AI performance?
+3. Make accessible as npm package
